--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,44 @@
-version: '3.4'
+version: "3"
+
 services:
-  
-  fuse-analysis-cellfie:
-    build:
-      context: .
+  fa-cellfie-redis:
+    container_name: fa-cellfie-redis
+    image: redis:alpine
+    restart: always
+    environment: {}
+    volumes:
+      - /data
+    expose:
+      - 6379
+    command: ["--appendonly", "yes"]
+
+  fa-cellfie-pg-db:
+    container_name: fa-cellfie-pg-db
+    image: postgres:latest
     restart: always
     environment:
-      FUSE_HOST: $FUSE_HOST
-      FUSE_PORT: $FUSE_PORT
-      FUSE_VERSION: $FUSE_VERSION
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+    volumes:
+      - /var/lib/postgresql/data/
+    expose:
+      - 5432
     ports:
-      - $API_PORT:8080
+      - "5432:5432"
 
-    
+  fa-cellfie-api:
+    container_name: fa-cellfie-api
+    build: .
+    restart: always
+    environment:
+      DATABASE_URL: "postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@fa-cellfie-pg-db:5432/${POSTGRES_DB}"
+      HOST_ABSOLUTE_PATH: "${HOST_ABSOLUTE_PATH}"
+    ports:
+        - 8000:8000
+    volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+        - ./data:/app/data
+    depends_on:
+        - fa-cellfie-redis
+        - fa-cellfie-pg-db
